# realtime-call-clarity-poc

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  experiment_suite.yaml
configs/data/: local_opus_txt.yaml
configs/denoise/: deepfilternet.yaml  dpdfnet.yaml  dtln_onnx.yaml  noisereduce.yaml  passthrough.yaml  rnnoise_external.yaml  spectral_gate.yaml  tiny_mask_gru.yaml  webrtc_apm.yaml
configs/enhance/: dpdfnet_detail_rescue.yaml  dpdfnet_remaster.yaml  strong_online.yaml
configs/experiment_suites/: adaptive_clarity_original_audio.yaml  dpdfnet_detail_rescue_original_audio.yaml  dpdfnet_naturalize_original_audio.yaml  dpdfnet_remaster_original_audio.yaml
configs/filter/: adaptive_clarity.yaml  dpdfnet_naturalize.yaml
configs/leveler/: compressor_limiter.yaml  speech_aware_agc.yaml
configs/metrics/: default.yaml
configs/pipeline/: baseline.yaml  denoise_agc.yaml  denoise_agc_slowdown.yaml  dpdfnet.yaml  dpdfnet_apbwe_block.yaml  dpdfnet_apbwe_block_agc.yaml  dpdfnet_clarity.yaml  dpdfnet_decrackle.yaml  dpdfnet_detail_rescue.yaml  (+17 more)
docs/: receive_side_enhancement.md
scripts/: benchmark_latency.py  dataset_hf.py  decode_manifest.py  make_report.py  run_eval.py  run_experiment_suite.py
tests/: test_adaptive_clarity.py  test_agc_no_silence_boost.py  test_ap_bwe_block.py  test_audio_io.py  test_chunker.py  test_crackle_classifier.py  test_decrackle.py  test_dpdfnet.py  test_dpdfnet_detail_rescue.py  test_dpdfnet_naturalize.py  test_dpdfnet_remaster.py  test_enhance_eval_cli.py  test_experiment_suite_cli.py  test_flashsr.py  test_guardrails.py  test_integration_synthetic_eval.py  test_latency_accounting.py  test_limiter.py  test_manifests.py  test_metrics_aggregate.py  test_neural_decrackle.py  test_operational_metrics.py  test_optional_dependency.py  test_optional_quality_metrics.py  test_pipeline_shapes.py  test_receive_processors.py  test_report_schema.py  test_ring_buffer.py  test_slowdown_controller.py  test_warm_rounded_voice.py  test_webrtc_apm.py  test_wsola_duration.py
(+129 files in other folders)
