[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-call-clarity-poc"
version = "0.1.0"
description = "CPU-first proof of concept for real-time call audio clarity, leveling, rate detection, and bounded slowdown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Research POC" }]
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.0",
  "torchaudio>=2.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8", "pre-commit>=3"]
metrics = ["torchmetrics[audio]>=1.3", "jiwer>=3", "soundfile>=0.12"]
asr = ["faster-whisper>=1.0"]
vad = ["silero-vad", "webrtcvad>=2.0"]
denoise = [
  "noisereduce>=3", "onnxruntime>=1.16", "soundfile>=0.12",
  "av>=11", "deepfilternet>=0.5.6", "dpdfnet>=0.5.1",
  "webrtc-audio-processing>=0.1.3",
]
tracking = ["mlflow>=2", "wandb>=0.16"]
train = ["torch-audiomentations>=0.11"]
all = [
  "pytest>=7", "ruff>=0.5", "mypy>=1.8", "pre-commit>=3",
  "torchmetrics[audio]>=1.3", "jiwer>=3", "soundfile>=0.12",
  "faster-whisper>=1.0", "silero-vad", "webrtcvad>=2.0",
  "noisereduce>=3", "onnxruntime>=1.16", "av>=11", "deepfilternet>=0.5.6", "dpdfnet>=0.5.1", "webrtc-audio-processing>=0.1.3",
  "mlflow>=2", "wandb>=0.16", "torch-audiomentations>=0.11",
]

[project.scripts]
callclarity = "callclarity.cli:main"
enhance-eval = "callclarity.cli:enhance_eval_main"
train-crackle-classifier = "callclarity.cli:train_crackle_classifier_main"
pseudolabel-crackle = "callclarity.cli:pseudolabel_crackle_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
